force-app/main/default/objects/Service_Agreement_Products__c/Service_Agreement_Products__c.object-meta.xml
<CustomObject>
    <label>Service Agreement Products</label>
    <nameField>
        <label>Contract Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Agreement Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>