force-app/main/default/objects/Service_Agreement_Products__c/fields/Active_Transcription_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Transcription_Product__c</fullName>
    <formula>Product__r.Transcription_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Transcription Product</label>
    <type>Checkbox</type>
</CustomField>