force-app/main/default/objects/Service_Agreement_Products__c/fields/Adjusted_MRR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_MRR_Amount__c</fullName>
    <formula>IF( Product__r.MRR_Product__c ,
 Price_Per_Unit__c *  Quantity__c,
null)</formula>
    <label>Adjusted MRR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>