force-app/main/default/objects/Service_Agreement_Products__c/fields/Audit_Active_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Active_User_Id__c</fullName>
    <label>Audit Active User Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>