force-app/main/default/objects/Service_Agreement_Products__c/fields/Bill_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Agreement Products</relationshipLabel>
    <relationshipName>Service_Agreement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>