force-app/main/default/objects/Service_Agreement_Products__c/fields/Bill_to_Share_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Share_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to Share Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Agreement Products (Bill-to Share Account)</relationshipLabel>
    <relationshipName>Service_Agreement_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>