force-app/main/default/objects/Service_Agreement_Products__c/fields/Billable_Limit__c.field-meta.xml
<CustomField>
    <fullName>Billable_Limit__c</fullName>
    <label>Billable Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>