force-app/main/default/objects/Service_Agreement_Products__c/fields/Billing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Billing_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Agreement</label>
    <referenceTo>Billing_Agreement__c</referenceTo>
    <relationshipLabel>Service Agreement Products</relationshipLabel>
    <relationshipName>Service_Agreement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>