force-app/main/default/objects/Service_Agreement_Products__c/fields/Billing_Agreement_And_Prod_Agreement_Key__c.field-meta.xml
<CustomField>
    <fullName>Billing_Agreement_And_Prod_Agreement_Key__c</fullName>
    <externalId>true</externalId>
    <label>Billing Agreement and Product Keys</label>
    <length>60</length>
    <type>Text</type>
</CustomField>