force-app/main/default/objects/Service_Agreement_Products__c/fields/Billing_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Code__c</fullName>
    <formula>IF(Product__r.Accounting_Product_Code__c=&quot;&quot;,Product__r.ProductCode,Product__r.Accounting_Product_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Code</label>
    <type>Text</type>
</CustomField>