force-app/main/default/objects/Service_Agreement_Products__c/fields/Billing_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Line_Item_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>ExternalID in CR360</inlineHelpText>
    <label>Billing Line Item ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>