force-app/main/default/objects/Service_Agreement_Products__c/fields/Billing_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Billing_Product_Description__c</fullName>
    <formula>Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Product Description</label>
    <type>Text</type>
</CustomField>