force-app/main/default/objects/Service_Agreement_Products__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>Managed By Workflow</description>
    <label>Billing Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>