force-app/main/default/objects/Service_Agreement_Products__c/fields/CallRevu360_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>CallRevu360_Sync_Error__c</fullName>
    <inlineHelpText>Error that integration displays if unable to sync to CallRevu360</inlineHelpText>
    <label>CallRevu360 Sync Error</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>