force-app/main/default/objects/Service_Agreement_Products__c/fields/CallRevu_Contract__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Contract__c</fullName>
    <label>Service Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Service Agreement Products</relationshipLabel>
    <relationshipName>Service_Agreement_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>