force-app/main/default/objects/Service_Agreement_Products__c/fields/Custom_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Message__c</fullName>
    <label>Custom Message</label>
    <type>TextArea</type>
</CustomField>