force-app/main/default/objects/Service_Agreement_Products__c/fields/First_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Billing_Date__c</fullName>
    <label>First Billing Date</label>
    <type>Date</type>
</CustomField>