force-app/main/default/objects/Service_Agreement_Products__c/fields/First_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_Amount__c</fullName>
    <formula>if(day(Effective_Date__c )!=1&amp;&amp; Product__r.MRR_Product__c ,
Date(Year(AddMonths(Effective_Date__c,1)),Month(AddMonths(Effective_Date__c,1)),1)-Effective_Date__c,0)* Price_Per_Unit__c /(addmonths(Date(Year(Effective_Date__c),Month(Effective_Date__c),1),1)-Date(Year(Effective_Date__c),Month(Effective_Date__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>