force-app/main/default/objects/Service_Agreement_Products__c/fields/First_Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_Quantity__c</fullName>
    <formula>if( Product__r.MRR_Product__c ,
Date(Year(AddMonths(Effective_Date__c,1)),Month(AddMonths(Effective_Date__c,1)),1)-Effective_Date__c,0)/(addmonths(Date(Year(Effective_Date__c),Month(Effective_Date__c),1),1)-Date(Year(Effective_Date__c),Month(Effective_Date__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Invoice Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>