force-app/main/default/objects/Service_Agreement_Products__c/fields/First_Share_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Share_Billing_Date__c</fullName>
    <label>First Share Billing Date</label>
    <type>Date</type>
</CustomField>