force-app/main/default/objects/Service_Agreement_Products__c/fields/Frequency_ID__c.field-meta.xml
<CustomField>
    <fullName>Frequency_ID__c</fullName>
    <formula>IF(ISPICKVAL(Frequency__c,&quot;Monthly&quot;), 10,
IF(ISPICKVAL(Frequency__c,&quot;Quarterly&quot;), 20,
IF(ISPICKVAL(Frequency__c,&quot;Annual&quot;), 30,
IF(ISPICKVAL(Frequency__c,&quot;SemiMonthly&quot;), 40,
IF(ISPICKVAL(Frequency__c,&quot;One Time&quot;), 50,
IF(ISPICKVAL(Frequency__c,&quot;Monthly, upfront&quot;), 70,
10))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frequency ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>