force-app/main/default/objects/Service_Agreement_Products__c/fields/Included_Units__c.field-meta.xml
<CustomField>
    <fullName>Included_Units__c</fullName>
    <label>Included Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>