force-app/main/default/objects/Service_Agreement_Products__c/fields/Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Quantity__c</fullName>
    <formula>If( !Product__r.MRR_Product__c ,1,
If( text(Invoice_Type_To_Create__c )=&quot;First Invoice&quot;, First_Invoice_Quantity__c ,
If( text(Invoice_Type_To_Create__c )=&quot;Last Invoice&quot;, Last_Invoice_Quantity__c ,1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>