force-app/main/default/objects/Service_Agreement_Products__c/fields/Invoice_Type_To_Create__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Type_To_Create__c</fullName>
    <label>Invoice Type To Create</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Invoice</fullName>
            </value>
            <value>
                <fullName>Last Invoice</fullName>
            </value>
            <value>
                <fullName>Monthly Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>