force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_360_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_360_Update__c</fullName>
    <label>Last 360 Update</label>
    <type>DateTime</type>
</CustomField>