force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Billing_Date__c</fullName>
    <label>Last Billing Date</label>
    <type>Date</type>
</CustomField>