force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Amount__c</fullName>
    <formula>(day(End_Date__c) / (Day(
Date(Year(AddMonths(End_Date__c,1)),Month(AddMonths(End_Date__c,1)),1)-1
)))* Price_Per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>