force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Invoice_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Quantity__c</fullName>
    <formula>day(End_Date__c) / (Day(
Date(Year(AddMonths(End_Date__c,1)),Month(AddMonths(End_Date__c,1)),1)-1
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Invoice Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>