force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Monthly_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Monthly_Invoice_Date__c</fullName>
    <label>Last Monthly Invoice Date</label>
    <type>Date</type>
</CustomField>