force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Opportunity_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Product_ID__c</fullName>
    <label>Last Opportunity Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>