force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Order Line Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Service Agreement Products (Last Order Line Item)</relationshipLabel>
    <relationshipName>Service_Agreement_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>