force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Share_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Share_Order_Date__c</fullName>
    <label>Last Share Order Date</label>
    <type>Date</type>
</CustomField>