force-app/main/default/objects/Service_Agreement_Products__c/fields/Last_Share_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Last_Share_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Share Order Line Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Service Agreement Products</relationshipLabel>
    <relationshipName>Service_Agreement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>