force-app/main/default/objects/Service_Agreement_Products__c/fields/Maximum_Included_Units__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Included_Units__c</fullName>
    <label>Maximum Included Units</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>