force-app/main/default/objects/Service_Agreement_Products__c/fields/Next_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Amount__c</fullName>
    <label>Next Billing Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>