force-app/main/default/objects/Service_Agreement_Products__c/fields/Next_Billing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_End_Date__c</fullName>
    <label>Next Billing End Date</label>
    <type>Date</type>
</CustomField>