force-app/main/default/objects/Service_Agreement_Products__c/fields/Next_Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Start_Date__c</fullName>
    <description>Calculated By Workflow</description>
    <label>Next Billing Start Date</label>
    <type>Date</type>
</CustomField>