force-app/main/default/objects/Service_Agreement_Products__c/fields/Next_Share_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Share_Billing_Date__c</fullName>
    <label>Next Share Billing Date</label>
    <type>Date</type>
</CustomField>