force-app/main/default/objects/Service_Agreement_Products__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>150</length>
    <type>Text</type>
</CustomField>