force-app/main/default/objects/Service_Agreement_Products__c/fields/Pending_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Pending_Expiration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box gets checked when a Opportunity is processed that is a change or termination and the line items have negatived quantities.</inlineHelpText>
    <label>Pending Expiration</label>
    <type>Checkbox</type>
</CustomField>