force-app/main/default/objects/Service_Agreement_Products__c/fields/Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Unit__c</fullName>
    <label>Price Per Unit</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>