force-app/main/default/objects/Service_Agreement_Products__c/fields/PriceBookEntryID__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryID__c</fullName>
    <label>PriceBookEntryID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>