force-app/main/default/objects/Service_Agreement_Products__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Contract_Products</relationshipName>
    <type>Lookup</type>
</CustomField>