force-app/main/default/objects/Service_Agreement_Products__c/fields/Product_Bundle_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Bundle_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Bundle Item</label>
    <referenceTo>Product_Bundle_Item__c</referenceTo>
    <relationshipLabel>Service Agreement Products</relationshipLabel>
    <relationshipName>Service_Agreement_Products</relationshipName>
    <type>Lookup</type>
</CustomField>