force-app/main/default/objects/Service_Agreement_Products__c/fields/Product_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Product_Catalog__c</fullName>
    <formula>TEXT(Product__r.Product_Catalog__c)</formula>
    <label>Product Catalog</label>
    <type>Text</type>
</CustomField>