force-app/main/default/objects/Service_Agreement_Products__c/fields/Prorated_Start__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Start__c</fullName>
    <formula>if(day(Effective_Date__c )!=1,
Date(Year(AddMonths(Effective_Date__c,1)),1,1)-Effective_Date__c+1,1000)

/*
if(day(Effective_Date__c )!=1,
Date(Year(AddMonths(Effective_Date__c,1)),Month(Year(AddMonths(Effective_Date__c,1))),1)-Effective_Date__c+1
,0)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated Start</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>