force-app/main/default/objects/Service_Agreement_Products__c/fields/Ready_To_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Invoice__c</fullName>
    <formula>!isblank(  text(Invoice_Type_To_Create__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready To Invoice</label>
    <type>Checkbox</type>
</CustomField>