force-app/main/default/objects/Service_Agreement_Products__c/fields/Sent_First_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sent_First_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent First Invoice</label>
    <type>Checkbox</type>
</CustomField>