force-app/main/default/objects/Service_Agreement_Products__c/fields/Simplified_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Simplified_Product_Category__c</fullName>
    <formula>TEXT(Product__r.Simplified_Product_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Simplified Product Category</label>
    <type>Text</type>
</CustomField>