force-app/main/default/objects/Service_Agreement_Products__c/fields/System_Sync__c.field-meta.xml
<CustomField>
    <fullName>System_Sync__c</fullName>
    <formula>TEXT(Product__r.System_Sync__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Sync</label>
    <type>Text</type>
</CustomField>