force-app/main/default/objects/Service_Agreement_Products__c/validationRules/Product_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Must_Be_Specified</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(Product__c)</errorConditionFormula>
    <errorMessage>Product Must Be Specified</errorMessage>
</ValidationRule>