force-app/main/default/objects/Service_Agreement_Products__c/listViews/Active_This_Week.listView-meta.xml
<ListView>
    <fullName>Active_This_Week</fullName>
    <columns>CallRevu_Contract__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>NAME</columns>
    <columns>MRR__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Price_Per_Unit__c</columns>
    <columns>Billing_Line_Item_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Effective_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Set-Up</value>
    </filters>
    <label>Active last 60 Days</label>
</ListView>