force-app/main/default/objects/Service_Agreement_Products__c/listViews/Active_with_Setup_Fees.listView-meta.xml
<ListView>
    <fullName>Active_with_Setup_Fees</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>CallRevu_Contract__c</columns>
    <columns>NAME</columns>
    <columns>Billing_Code__c</columns>
    <columns>Billing_Type__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Price_Per_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>setup</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Price_Per_Unit__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Active with Setup Fees</label>
</ListView>