force-app/main/default/objects/Service_Agreement_Products__c/listViews/Audi_of_America.listView-meta.xml
<ListView>
    <fullName>Audi_of_America</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bill_to_Account__c</field>
        <operation>equals</operation>
        <value>Audi of America,Inc.</value>
    </filters>
    <label>Audi of America</label>
</ListView>