force-app/main/default/objects/Service_Agreement_Products__c/listViews/Batch_Import_Effective_Date_Updates.listView-meta.xml
<ListView>
    <fullName>Batch_Import_Effective_Date_Updates</fullName>
    <columns>NAME</columns>
    <columns>Billing_Agreement__c</columns>
    <columns>Billing_Line_Item_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Billing_Code__c</columns>
    <columns>Billing_Agreement_And_Prod_Agreement_Key__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Sync_With_CallRevu_360__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Batch Import - Effective Date Updates</label>
    <sharedTo>
        <role>Accounting</role>
    </sharedTo>
</ListView>