force-app/main/default/objects/Service_Agreement_Products__c/listViews/Batch_Import_Review.listView-meta.xml
<ListView>
    <fullName>Batch_Import_Review</fullName>
    <columns>NAME</columns>
    <columns>Billing_Agreement__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Billing_Code__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>CallRevu_Contract__c</columns>
    <columns>Billing_Agreement_And_Prod_Agreement_Key__c</columns>
    <columns>Sync_With_CallRevu_360__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sync_With_CallRevu_360__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Batch Import - Review</label>
    <sharedTo>
        <role>Accounting</role>
        <role>Salesforce_Administrator</role>
    </sharedTo>
</ListView>