force-app/main/default/objects/Service_Agreement_Products__c/listViews/By_Product_Search.listView-meta.xml
<ListView>
    <fullName>By_Product_Search</fullName>
    <columns>CallRevu_Contract__c</columns>
    <columns>Billing_Agreement__c</columns>
    <columns>NAME</columns>
    <columns>Billing_Code__c</columns>
    <columns>Sync_With_CallRevu_360__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Price_Per_Unit__c</columns>
    <columns>Billing_Agreement_And_Prod_Agreement_Key__c</columns>
    <columns>Billing_Line_Item_ID__c</columns>
    <columns>Product__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Supplemental</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Billing_Line_Item_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Effective_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>By Product Search</label>
</ListView>