force-app/main/default/objects/Service_Agreement_Products__c/listViews/CallSource_Migration.listView-meta.xml
<ListView>
    <fullName>CallSource_Migration</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>CallSource Migration</label>
</ListView>