force-app/main/default/objects/Service_Agreement_Products__c/listViews/Copy_of_Still_syncing.listView-meta.xml
<ListView>
    <fullName>Copy_of_Still_syncing</fullName>
    <columns>CallRevu_Contract__c</columns>
    <columns>Billing_Agreement__c</columns>
    <columns>Bill_to_Account__c</columns>
    <columns>NAME</columns>
    <columns>Billing_Code__c</columns>
    <columns>Sync_With_CallRevu_360__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Price_Per_Unit__c</columns>
    <columns>Billing_Agreement_And_Prod_Agreement_Key__c</columns>
    <columns>Billing_Line_Item_ID__c</columns>
    <columns>Product__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Billing_Code__c</field>
        <operation>equals</operation>
        <value>AOP</value>
    </filters>
    <label>AOP products</label>
    <sharedTo>
        <role>Accounting</role>
    </sharedTo>
</ListView>