force-app/main/default/objects/Service_Agreement_Products__c/listViews/Pending_Expiration_Products.listView-meta.xml
<ListView>
    <fullName>Pending_Expiration_Products</fullName>
    <columns>CallRevu_Contract__c</columns>
    <columns>NAME</columns>
    <columns>MRR__c</columns>
    <columns>Pending_Expiration__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Prorated_Start__c</columns>
    <columns>Prorated_End__c</columns>
    <columns>Sync_With_CallRevu_360__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pending_Expiration__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Pending Expiration Products</label>
    <sharedTo>
        <role>Accounting</role>
        <role>CFO</role>
        <role>Director_of_Finance</role>
    </sharedTo>
</ListView>