force-app/main/default/objects/Service_Agreement_Products__c/listViews/Product_Search.listView-meta.xml
<ListView>
    <fullName>Product_Search</fullName>
    <columns>CallRevu_Contract__c</columns>
    <columns>NAME</columns>
    <columns>Effective_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallRevu_Contract__c</field>
        <operation>contains</operation>
        <value>Holman Ford Lincoln Maple Shade</value>
    </filters>
    <label>Product Search</label>
</ListView>